--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* default parameters reinitialized */
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -31,6 +31,7 @@ h2 {
 p, li {
   font-size: 16px;
 }
+
 
 /* header  */
 header {
@@ -72,7 +73,7 @@ nav ul {
   padding-top: 58px;
 }
 
-#logo{
+#logo {
   padding: 40px 0 0 30px;
 }
 #logo img {
@@ -84,17 +85,16 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* border: 1px solid red; */
   height: 100%;
   width: 90%;
 }
 
+/* section 1 */
 .section_1 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 300px;
-  /* border: 1px solid purple; */
   font-size: 16px;
   width: 96.5%;
   margin-top: 25px;
@@ -119,7 +119,6 @@ main {
 
 form {
   height: 17%;
-  /* border: 1px solid orange; */
   width: 37%;
   display: flex;
   justify-content: flex-start;
@@ -172,7 +171,7 @@ form {
 
 }
 
-.search_icons i{
+.search_icons i {
   font-size: 18px;
 }
 
@@ -181,13 +180,8 @@ form {
   display:flex;
   justify-content: space-between;
   align-items: center;
-  /* border: 1px solid red; */
   width: 72%;
   margin-top: 15px;
-}
-
-h3 {
-  width: 7%;
 }
 
 .filters_list {
@@ -206,7 +200,7 @@ h3 {
   width: 170px;
 }
 
-.family{
+.family {
   width: 140px;
 }
 
@@ -232,10 +226,10 @@ h3 {
 .pets {
   width: 195px;
 }
+
 .pets i {
   left: -6px;
 }
-
 
 /* filters buttons */
 .filters p {
@@ -282,7 +276,6 @@ h3 {
 .section_2 {
   height: 600px;
   width: 96.5%;
-  /* border: 1px solid green; */
   display: flex;
   justify-content: space-between;
   margin-top: 3%;
@@ -316,18 +309,14 @@ article {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  /* border: 1px solid green; */
   height: 82%;
   width: 100%;
 }
-
-
 
 .card {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  /* border: 1px solid blue; */
   border-radius: 8px;
   height: 45%;
   width: 29%;
@@ -341,10 +330,7 @@ a:-webkit-any-link {
   color: black;
 }
 
-
-
 .card_image {
-  /* border: 1px solid red; */
   overflow: hidden;
   object-fit: cover;
   border-radius: 8px 8px 0 0;
@@ -378,24 +364,20 @@ a:-webkit-any-link {
 }
 
 
-
 .stars {
   display: flex;
   justify-content: space-between;
   width:30%;
 }
 
-.fa-solid, .fas {
+.stars_filled.fa-solid, .fas {
+  color:#0065FC;
   font-size: 10px;
 }
 
-.stars_filled.fa-solid, .fas {
-  color:#0065FC;
-}
-
-/* remettre couleur origine */
 .stars_empty.fa-solid, .fas {
   color:#f2f2f2;
+  font-size: 10px;
 }
 
 aside {
@@ -419,22 +401,15 @@ aside {
   padding-top: 4.5%;
 }
 
-/* problème icone */
-.fa-solid.fa-chart-line.fa-2x {
-  font-size: 18px;
-}
-
 .aside_cards {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* border: 1px solid blue; */
   height: 84%;
 }
 
 .aside_card {
-  /* border: 1px solid green; */
   height: 30%;
   width: 100%;
   display: flex;
@@ -448,7 +423,6 @@ aside {
 }
 .aside_card_image {
   object-fit: cover;
-  /* border: 1px solid red; */
   border-radius: 8px 0 0 8px;
   overflow: hidden;
   height: 100%;
@@ -475,14 +449,12 @@ aside {
   flex-direction: column;
 }
 
-
 .aside_card_content h3 {
   width: 100%;
   padding-bottom: 5px;
 }
 
 .section_3 {
-  /* border: 2px solid black; */
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -507,7 +479,6 @@ aside {
   width: 50%;
   display: flex;
   align-items: center;
-  /* border: 1px solid green; */
 }
 
 .padding_1 {
@@ -523,7 +494,6 @@ aside {
   display: flex;
   justify-content: space-between;
   height: 100%;
-  /* border: 1px solid yellow; */
 }
 
 .card_activity_1 {
@@ -531,7 +501,6 @@ aside {
   flex-direction: column;
   height: 100%;
   width: 47%;
-  /* border: 1px solid red; */
   border-radius: 8px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   background-color: white;
@@ -543,7 +512,6 @@ aside {
   justify-content: space-between;
   height: 100%;
   width: 48%;
-  /* border: 1px solid black; */
 }
 
 .card_activity_2 {
@@ -552,7 +520,6 @@ aside {
   height: 49%;
   background-color: white;
   border-radius: 8px;
-  /* border: 1px solid blue; */
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
@@ -562,7 +529,6 @@ aside {
   height: 45%;
   border-radius: 8px;
   background-color: white;
-  /* border: 1px solid orange; */
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
@@ -629,7 +595,6 @@ footer {
 .footer_content h3 {
   width: 100%;
   font-size: 16px;
-  /* border: 1px solid red; */
   margin-bottom: 5px;
 }
 
@@ -637,6 +602,8 @@ footer {
   padding: 3px 0px;
   margin-top: 5px;
 }
+
+/* responsive mobile part */
 
 @media screen and (max-width: 768px) {
   header {
@@ -801,8 +768,9 @@ footer {
     padding-top: 0;
   }
 
-  .fa-solid.fa-chart-line.fa-2x {
-    font-size: 22px;
+  .black {
+    font-size: 19px;
+    color: black;
   }
 
   .aside_cards {
@@ -812,7 +780,6 @@ footer {
     border-radius: 20px;
     height: 32%;
     box-shadow: 0 2px 10px rgb(0 0 0 / 15%);
-
   }
 
   .aside_card_image {
@@ -835,7 +802,6 @@ footer {
     box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
     padding: 0 15px;
     justify-content: center;
-
   }
 
   .flat h2 {
@@ -902,7 +868,6 @@ footer {
 
   .flat .see_more {
     padding: 30px 0 0 0;
-
   }
 
   .section_3 {
@@ -1017,6 +982,8 @@ footer {
   }
 }
 
+/* tablet part */
+
 @media (min-width: 769px) and (max-width: 992px) {
   nav {
     width: 38%;
@@ -1029,7 +996,6 @@ footer {
   .section_1_content {
     height: 20%;
   }
-
 
   form {
     width: 54%;
@@ -1075,9 +1041,11 @@ footer {
   .family .rounded {
     left: 64px;
   }
-    .pets .rounded {
-      left: 66px;
-    }
+
+  .pets .rounded {
+    left: 66px;
+  }
+
   .tips {
     height: 16%;
   }
@@ -1103,7 +1071,6 @@ footer {
   .cards {
     justify-content: space-between;
     height: 82%;
-
   }
 
   .card {
