--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,10 @@ form {
   margin-top: 3%;
 }
 
+.title_flat {
+  display: none;
+}
+
 article {
   display: flex;
   justify-content: space-between;
