--- a/css/style.css
+++ b/css/style.css
@@ -327,10 +327,10 @@ article {
   padding: 0.5%;
   background-color: white;
   box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-  text-decoration: none;
 }
 
-a:-webkit-any-link {
+.cards a:hover, .cards a:active, .cards a:visited {
+  text-decoration: none;
   color: black;
 }
 
@@ -361,6 +361,7 @@ a:-webkit-any-link {
   font-size: 16px;
   width: 100%;
   padding-bottom: 5px;
+  white-space: nowrap;
 }
 
 .card_content p {
@@ -411,6 +412,11 @@ aside {
   justify-content: space-between;
   align-items: center;
   height: 84%;
+}
+
+.aside_cards a:hover, .aside_cards a:active, .aside_cards a:visited {
+  text-decoration: none;
+  color: black;
 }
 
 .aside_card {
@@ -498,6 +504,11 @@ aside {
   display: flex;
   justify-content: space-between;
   height: 100%;
+}
+
+.activity_cards a:hover, .activity_cards a:active, .activity_cards a:visited {
+  color: black;
+  text-decoration: none;
 }
 
 .card_activity_1 {
